<resources>
    <string name="app_name">Restaurant Senti</string>
    <string name="full_name">Full Name</string>
    <string name="login_here">Already a member? <u>Login</u></string>
    <string name="sign_up">Signup</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member yet? <u>Signup</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>